# chronos

./: .gitignore  README.md  chronos.py  pyproject.toml
tests/: test_core.py  test_file_operations.py  test_imports.py  test_logout.py  test_schedule.py  test_system.py  test_time_range.py  test_timer.py
